// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtMention should match snapshot, no highlight 1`] = `
<Text
  style={
    {
      "backgroundColor": "yellow",
    }
  }
>
  <Text
    style={[]}
  >
    @John.Smith
  </Text>
</Text>
`;

exports[`AtMention should match snapshot, with highlight 1`] = `
<Text
  onLongPress={[Function]}
  onPress={[Function]}
  style={
    {
      "backgroundColor": "yellow",
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#ff0000",
        },
        {
          "backgroundColor": "#ffd470",
          "color": "#1b1d22",
        },
      ]
    }
  >
    @John.Smith
  </Text>
</Text>
`;

exports[`AtMention should match snapshot, without highlight 1`] = `
<Text
  onLongPress={[Function]}
  onPress={[Function]}
  style={
    {
      "backgroundColor": "yellow",
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#ff0000",
        },
      ]
    }
  >
    @Victor.Welch
  </Text>
</Text>
`;
